2008-10-01 thibaut
* Add an alarm. It checks which object in catalog table is into ZODB.